--- a/public/static/admin/config.yml
+++ b/public/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
   branch: main
-media_folder: static/img
+media_folder: public/static/img
 slug:
   encoding: "ascii"
   clean_accents: true
